# corpus

./: LICENSE  README.md  pyproject.toml
corpus/: metrics.py  nn.py  split.py
