[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "corpus"
version = "0.1.0"
description = "A sugar-coat sklearn wrapper for error metrics and split utilities"
authors = [
    { name = "tsukuyomi", email = "bluefox.777.neo@gmail.com" }
]
license = {text = "MIT"}
dependencies = [
    "scikit-learn >= 1.3.0",
    "numpy >= 1.24.0"
]
readme = "README.md"
requires-python = ">=3.10"